# osom_asm

./: Cargo.toml  README.md
projects/osom_asm_common/: Cargo.toml
projects/osom_asm_common/src/: inline_vec.rs  lib.rs
projects/osom_asm_common/tests/: inline_vec.rs
projects/osom_asm_test_helpers/: Cargo.toml
projects/osom_asm_test_helpers/src/: _hidden.rs  lib.rs  macros.rs
projects/osom_asm_test_helpers/tests/: test_asserts.rs
projects/osom_asm_x86_64/: Cargo.toml
projects/osom_asm_x86_64/src/: lib.rs
projects/osom_asm_x86_64/src/assembler/: emission_data.rs  errors.rs  mod.rs  traits.rs
projects/osom_asm_x86_64/src/assembler/implementation/: fragment.rs  instruction_label_offset.rs  macros.rs  mod.rs  x86_64_assembler.rs  x86_64_assembler_assemble.rs  x86_64_assembler_builder.rs  x86_64_assembler_crate.rs  x86_64_assembler_emit_instruction.rs  x86_64_assembler_public.rs
projects/osom_asm_x86_64/src/assembler/implementation/instructions/: cmp.rs  control.rs  group1.rs  helpers.rs  macros.rs  misc.rs  mod.rs  mov.rs  push_pop.rs  xor.rs
projects/osom_asm_x86_64/src/models/: _invariants.rs  condition.rs  gpr.rs  gpr_kind.rs  immediate.rs  immediate32.rs  immediate64.rs  instruction.rs  label.rs  memory.rs  mod.rs  scale.rs  size.rs
projects/osom_asm_x86_64/tests/: region_stream.rs  tests_execution.rs  tests_imm.rs  tests_patches.rs  tests_simple.rs  tests_variadic.rs
projects/osom_asm_x86_64/tests/utils/: mod.rs  region_stream.rs
