[workspace]
members = [
    "projects/osom_asm_test_helpers",
    "projects/osom_asm_common",
    "projects/osom_asm_x86_64",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Rafal Szefler <rafael.szefler@gmail.com>"]
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/RafalSzefler/osom_asm"
categories = ["compilers"]

[workspace.dependencies]
osom_encoders_x86_64 = "0.1.1"

# tests
rstest = "0.25"
region = "3"
