[package]
name = "osom_asm_common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Common tools for in memory osom assemblers."
keywords = ["osom", "cpu", "jit", "assembler"]

[lib]
crate-type = ["lib"]

[dev-dependencies]
rstest = { workspace = true }
