[package]
name = "osom_asm_x86_64"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "In memory instruction assembler for x86_64."
keywords = ["osom", "cpu", "jit", "x86_64", "assembler"]

[package.metadata.cross.build]
default-target = "x86_64-unknown-linux-gnu"

[lib]
crate-type = ["lib"]

[dependencies]
osom_asm_common = { path = "../osom_asm_common" }
osom_encoders_x86_64 = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
osom_asm_test_helpers = { path = "../osom_asm_test_helpers" }
